[package]
name = "cmos"
version = "0.1.1"
authors = ["Noah Rinehart <rinehart.noah@gmail.com>", "Antoine \"Anthony\" Sébert <antoine.sb@orange.fr>"]
description = "A utility to read, write CMOS and RTC data. Standard library not required."
documentation = "https://docs.rs/cmos/"
homepage = "https://github.com/noahrinehart/cmos"
repository = "https://github.com/AntoineSebert/cmos"
readme = "README.md"
keywords = ["osdev", "cmos", "rtc", "port", "io"]
categories = ["date-and-time", "embedded", "hardware-support", "no-std", "os"]
license = "MIT"
edition = "2018"

[dependencies]
cpuio = "0.2.0"